tdf#112164 sax: handle errors on last call to XML_Parse()

If XML_Parse() is called with isFinal=1 and there are open tags, that is
an error (XML_ERROR_NO_ELEMENTS) that must be converted to an exception.

This reveals that we already had an incomplete input document, which
needs to be moved to "fail" now.

Change-Id: I7ce3b51bd87923b5edde621508cf38d7ebbc2b14